Add Transactions handler
