# internal/models/users.go
@@ -11,6 +11,6 @@ type User struct {
 	FirstName string    `gorm:"not null"`
 	LastName  string    `gorm:"not null"`
 	Email     string    `gorm:"not null;uniqueIndex"`
-	Password  string    `gorm:"not null"`
+	Password  string
 	internal.Metadata
 }
